[gd_scene load_steps=2 format=3 uid="uid://ability_bar_scene"]

[ext_resource type="Script" path="res://scripts/UI/ability_bar.gd" id="1_ability_bar"]

[node name="AbilityBar" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ability_bar")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="AbilityButton1" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IconButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton1"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton1"]
layout_mode = 2
text = "Ability 1"
horizontal_alignment = 1

[node name="AbilityButton2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IconButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton2"]
layout_mode = 2
text = "Ability 2"
horizontal_alignment = 1

[node name="AbilityButton3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IconButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton3"]
layout_mode = 2
text = "Ability 3"
horizontal_alignment = 1

[node name="AbilityButton4" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="IconButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/AbilityButton4"]
layout_mode = 2
text = "Ability 4"
horizontal_alignment = 1
